--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>MVC with Vanilla.JS</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-    <p>branch test</p>
+  <div id="app">
+
+    <header>
+      <h2 class="container">검색</h2>
+    </header>
+
+    <div class="container">
+      <form v-on:submit="onSubmit">
+        <input v-model="query" type="text" placeholder="검색어를 입력하세요" autofocus>
+        <button v-show="query.length" type="reset" class="btn-reset"></button>
+      </form>
+    </div>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script type="module" src="./js/app.js"></script>
 </body>
+
 </html>
