--- a/index.html
+++ b/index.html
@@ -17,10 +17,46 @@
     </header>
 
     <div class="container">
-      <form v-on:submit="onSubmit">
-        <input v-model="query" type="text" placeholder="검색어를 입력하세요" autofocus>
-        <button v-show="query.length" type="reset" class="btn-reset"></button>
+      <form v-on:submit.prevent="onSubmit">
+        <input v-on:keyup="onKeyup" v-model="query" type="text" placeholder="검색어를 입력하세요" autofocus>
+        <button v-on:click="onReset" v-show="query.length" type="reset" class="btn-reset"></button>
       </form>
+
+      <div v-if="submitted">
+        <div v-if="searchResult.length">
+          <ul>
+            <li v-for="item in searchResult">
+              {{ item.name }}
+            </li>
+          </ul>
+        </div>
+        <div v-else>
+          {{query}} 검색어로 찾을 수 없습니다.
+        </div>
+      </div>
+      <div v-else>
+        <ul class="tabs">
+          <li v-for="tab in tabs" v-on:click="onClickTab(tab)" v-bind:class="{active: tab === selectedTab}">
+            {{tab}}
+          </li>
+        </ul>
+        <ul v-if="selectedTab === tabs[0]">
+          <div v-if="keywords.length">
+            <ul class="list">
+              <li v-for="(item, idx) in keywords" v-bind:key="idx" v-on:click="onClickKeyword(item.keyword)">
+                <span class="number">{{idx + 1}}</span>
+                {{item.keyword}}
+              </li>
+            </ul>
+          </div>
+          <div v-else>
+            추천 검색어가 없습니다.
+          </div>
+        </ul>
+        <ul v-else>
+          최근 검색어 목록
+        </ul>
+      </div>
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
