--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
   <title>MVC with Vanilla.JS</title>
   <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
   <div id="app">
     <header>
@@ -18,53 +20,20 @@
 
       <div class="content">
         <div v-if="submitted">
-          <div v-if="searchResult.length">
-            <ul>
-              <li v-for="item in searchResult">
-                <img v-bind:src="item.image"> {{item.name}}
-              </li>
-            </ul>
-          </div>
-          <div v-else>
-            {{query}} 검색어로 찾을수 없습니다 
-          </div>
+          <search-result v-bind:data="searchResult" v-bind:query="query"></search-result>
         </div>
         <div v-else>
           <ul class="tabs">
-            <li v-for="tab in tabs" v-bind:class="{active: tab === selectedTab}"
-            v-on:click="onClickTab(tab)">
+            <li v-for="tab in tabs" v-bind:class="{active: tab === selectedTab}" v-on:click="onClickTab(tab)">
               {{tab}}
             </li>
           </ul>
 
           <div v-if="selectedTab === tabs[0]">
-            <div v-if="keywords.length">
-              <ul class="list">
-                <li v-for="(item, index) in keywords" 
-                    v-on:click="onClickKeyword(item.keyword)">
-                  <span class="number">{{index + 1}}</span> {{item.keyword}}
-                </li>
-              </ul>
-            </div>
-            <div v-else>
-              추천 검색어가 없습니다
-            </div>
+            <list v-bind:data="keywords" type="keywords" v-on:@click="onClickKeyword"></list>
           </div>
           <div v-else>
-            <div v-if="history.length">
-              <ul class="list">
-                <li v-for="item in history" 
-                    v-on:click="onClickKeyword(item.keyword)">
-                  {{item.keyword}}
-                  <span class="date">{{item.date}}</span>
-                  <button class="btn-remove" 
-                    v-on:click.stop="onClickRemoveHistory(item.keyword)"></button>
-                </li>
-              </ul>
-            </div>
-            <div v-else>
-              최근 검색어가 없습니다 
-            </div>
+            <list v-bind:data="history" type="history" v-on:@click="onClickKeyword" v-on:@remove="onClickRemoveHistory"></list>
           </div>
         </div>
       </div>
@@ -73,11 +42,42 @@
   <script src="https://unpkg.com/vue"></script>
   <script type="module" src="./js/app.js"></script>
 </body>
+
 </html>
 
 <template id="search-form">
   <form v-on:submit.prevent="onSubmit">
     <input type="text" v-model="inputValue" v-on:keyup="onKeyup" placeholder="검색어를 입력하세요" autofocus>
     <button v-show="inputValue.length" v-on:click="onReset" type="reset" class="btn-reset"></button>
-  </form>  
+  </form>
+</template>
+
+<template id="search-result">
+
+  <div v-if="data.length">
+    <ul>
+      <li v-for="item in data">
+        <img v-bind:src="item.image"> {{item.name}}
+      </li>
+    </ul>
+  </div>
+  <div v-else>
+    {{query}} 검색어로 찾을수 없습니다
+  </div>
+</template>
+
+<template id="list">
+  <div v-if="data.length">
+    <ul class="list">
+      <li v-for="(item, index) in data" v-on:click="onClickList(item.keyword)">
+        <span v-if="type === 'keywords'"  class="number">{{index + 1}}</span>
+        {{item.keyword}}
+        <span v-if="type === 'history'" class="date">{{item.date}}</span>
+        <button v-if="type === 'history'" class="btn-remove" v-on:click.stop="onRemoveList(item.keyword)"></button>
+      </li>
+    </ul>
+  </div>
+  <div v-else>
+    추천 검색어가 없습니다
+  </div>
 </template>
